deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-produit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-produit
  template:
    metadata:
      labels:
        app: service-produit
    spec:
      containers:
        - name: service-produit
          image: dstndiaye/service-produit:v1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: service-produit
spec:
  type: LoadBalancer
  selector:
    app: service-produit
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
