istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-produit
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            prefix: /api/produits
      route:
        - destination:
            host: service-produit
            port:
              number: 8081
    - match:
        - uri:
            prefix: /swagger-ui
      route:
        - destination:
            host: service-produit
            port:
              number: 8081
